src/harness/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__queued_messages_visible_when_status_hidden_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 1151
expression: "render_snapshot(&pane, area)"
---
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit                                  
                                                
› Ask Codex to do anything                      
                                                
  loading · 100% left
